src/antlr/gen/MLWParser.cpp

// Generated from MLW.g4 by ANTLR 4.13.2


#include "MLWListener.h"

#include "MLWParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MLWParserStaticData final {
  MLWParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MLWParserStaticData(const MLWParserStaticData&) = delete;
  MLWParserStaticData(MLWParserStaticData&&) = delete;
  MLWParserStaticData& operator=(const MLWParserStaticData&) = delete;
  MLWParserStaticData& operator=(MLWParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mlwParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MLWParserStaticData> mlwParserStaticData = nullptr;

void mlwParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mlwParserStaticData != nullptr) {
    return;
  }
#else
  assert(mlwParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MLWParserStaticData>(
    std::vector<std::string>{
      "program", "linkerstatement", "functionDefinition", "parameterList", 
      "parameter", "parameterList_typeonly", "parameter_typeonly", "type", 
      "primitiveType", "block", "statement", "variableDeclaration", "assignment", 
      "retStmt", "ifStmt", "whileStmt", "primaryExpression", "postfixExpression", 
      "expression", "argumentList", "literal", "identifier"
    },
    std::vector<std::string>{
      "", "'!'", "'import'", "'extern'", "'('", "')'", "'->'", "'fn'", "','", 
      "':'", "'i32'", "'i64'", "'f32'", "'f64'", "'str'", "'bool'", "'void'", 
      "'{'", "'}'", "';'", "'var'", "'='", "'+='", "'-='", "'*='", "'/='", 
      "'return'", "'if'", "'else'", "'while'", "'['", "']'", "'.'", "'-'", 
      "'~'", "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", "'>='", "'=='", 
      "'!='", "'&&'", "'||'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "IntegerLiteral", 
      "FloatLiteral", "StringLiteral", "BooleanLiteral", "Identifier", "WS", 
      "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mlwParserStaticData = std::move(staticData);
}

}

MLWParser::MLWParser(TokenStream *input) : MLWParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MLWParser::MLWParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MLWParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mlwParserStaticData->atn, mlwParserStaticData->decisionToDFA, mlwParserStaticData->sharedContextCache, options);
}

MLWParser::~MLWParser() {
  delete _interpreter;
}

const atn::ATN& MLWParser::getATN() const {
  return *mlwParserStaticData->atn;
}

std::string MLWParser::getGrammarFileName() const {
  return "MLW.g4";
}

const std::vector<std::string>& MLWParser::getRuleNames() const {
  return mlwParserStaticData->ruleNames;
}

const dfa::Vocabulary& MLWParser::getVocabulary() const {
  return mlwParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MLWParser::getSerializedATN() const {
  return mlwParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MLWParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MLWParser::ProgramContext::EOF() {
  return getToken(MLWParser::EOF, 0);
}

std::vector<MLWParser::LinkerstatementContext *> MLWParser::ProgramContext::linkerstatement() {
  return getRuleContexts<MLWParser::LinkerstatementContext>();
}

MLWParser::LinkerstatementContext* MLWParser::ProgramContext::linkerstatement(size_t i) {
  return getRuleContext<MLWParser::LinkerstatementContext>(i);
}

std::vector<MLWParser::FunctionDefinitionContext *> MLWParser::ProgramContext::functionDefinition() {
  return getRuleContexts<MLWParser::FunctionDefinitionContext>();
}

MLWParser::FunctionDefinitionContext* MLWParser::ProgramContext::functionDefinition(size_t i) {
  return getRuleContext<MLWParser::FunctionDefinitionContext>(i);
}


size_t MLWParser::ProgramContext::getRuleIndex() const {
  return MLWParser::RuleProgram;
}

void MLWParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MLWParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

MLWParser::ProgramContext* MLWParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MLWParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MLWParser::T__0) {
      setState(44);
      linkerstatement();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(51); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(50);
      functionDefinition();
      setState(53); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == MLWParser::T__6);
    setState(55);
    match(MLWParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LinkerstatementContext ------------------------------------------------------------------

MLWParser::LinkerstatementContext::LinkerstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MLWParser::LinkerstatementContext::getRuleIndex() const {
  return MLWParser::RuleLinkerstatement;
}

void MLWParser::LinkerstatementContext::copyFrom(LinkerstatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExternStatementContext ------------------------------------------------------------------

MLWParser::IdentifierContext* MLWParser::ExternStatementContext::identifier() {
  return getRuleContext<MLWParser::IdentifierContext>(0);
}

MLWParser::TypeContext* MLWParser::ExternStatementContext::type() {
  return getRuleContext<MLWParser::TypeContext>(0);
}

MLWParser::ParameterList_typeonlyContext* MLWParser::ExternStatementContext::parameterList_typeonly() {
  return getRuleContext<MLWParser::ParameterList_typeonlyContext>(0);
}

MLWParser::ExternStatementContext::ExternStatementContext(LinkerstatementContext *ctx) { copyFrom(ctx); }

void MLWParser::ExternStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternStatement(this);
}
void MLWParser::ExternStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternStatement(this);
}
//----------------- ImportStatementContext ------------------------------------------------------------------

MLWParser::IdentifierContext* MLWParser::ImportStatementContext::identifier() {
  return getRuleContext<MLWParser::IdentifierContext>(0);
}

MLWParser::ImportStatementContext::ImportStatementContext(LinkerstatementContext *ctx) { copyFrom(ctx); }

void MLWParser::ImportStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStatement(this);
}
void MLWParser::ImportStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStatement(this);
}
MLWParser::LinkerstatementContext* MLWParser::linkerstatement() {
  LinkerstatementContext *_localctx = _tracker.createInstance<LinkerstatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MLWParser::RuleLinkerstatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<MLWParser::ImportStatementContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(57);
      match(MLWParser::T__0);
      setState(58);
      match(MLWParser::T__1);
      setState(59);
      identifier();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<MLWParser::ExternStatementContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(60);
      match(MLWParser::T__0);
      setState(61);
      match(MLWParser::T__2);
      setState(62);
      identifier();
      setState(63);
      match(MLWParser::T__3);
      setState(65);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 2251799813815296) != 0)) {
        setState(64);
        parameterList_typeonly();
      }
      setState(67);
      match(MLWParser::T__4);
      setState(68);
      match(MLWParser::T__5);
      setState(69);
      type();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefinitionContext ------------------------------------------------------------------

MLWParser::FunctionDefinitionContext::FunctionDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MLWParser::IdentifierContext* MLWParser::FunctionDefinitionContext::identifier() {
  return getRuleContext<MLWParser::IdentifierContext>(0);
}

MLWParser::TypeContext* MLWParser::FunctionDefinitionContext::type() {
  return getRuleContext<MLWParser::TypeContext>(0);
}

MLWParser::BlockContext* MLWParser::FunctionDefinitionContext::block() {
  return getRuleContext<MLWParser::BlockContext>(0);
}

MLWParser::ParameterListContext* MLWParser::FunctionDefinitionContext::parameterList() {
  return getRuleContext<MLWParser::ParameterListContext>(0);
}


size_t MLWParser::FunctionDefinitionContext::getRuleIndex() const {
  return MLWParser::RuleFunctionDefinition;
}

void MLWParser::FunctionDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDefinition(this);
}

void MLWParser::FunctionDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDefinition(this);
}

MLWParser::FunctionDefinitionContext* MLWParser::functionDefinition() {
  FunctionDefinitionContext *_localctx = _tracker.createInstance<FunctionDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, MLWParser::RuleFunctionDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(MLWParser::T__6);
    setState(74);
    identifier();
    setState(75);
    match(MLWParser::T__3);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MLWParser::Identifier) {
      setState(76);
      parameterList();
    }
    setState(79);
    match(MLWParser::T__4);
    setState(80);
    match(MLWParser::T__5);
    setState(81);
    type();
    setState(82);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

MLWParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MLWParser::ParameterContext *> MLWParser::ParameterListContext::parameter() {
  return getRuleContexts<MLWParser::ParameterContext>();
}

MLWParser::ParameterContext* MLWParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<MLWParser::ParameterContext>(i);
}


size_t MLWParser::ParameterListContext::getRuleIndex() const {
  return MLWParser::RuleParameterList;
}

void MLWParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void MLWParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}

MLWParser::ParameterListContext* MLWParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 6, MLWParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    parameter();
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MLWParser::T__7) {
      setState(85);
      match(MLWParser::T__7);
      setState(86);
      parameter();
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

MLWParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MLWParser::IdentifierContext* MLWParser::ParameterContext::identifier() {
  return getRuleContext<MLWParser::IdentifierContext>(0);
}

MLWParser::TypeContext* MLWParser::ParameterContext::type() {
  return getRuleContext<MLWParser::TypeContext>(0);
}


size_t MLWParser::ParameterContext::getRuleIndex() const {
  return MLWParser::RuleParameter;
}

void MLWParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void MLWParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}

MLWParser::ParameterContext* MLWParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 8, MLWParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    identifier();
    setState(93);
    match(MLWParser::T__8);
    setState(94);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterList_typeonlyContext ------------------------------------------------------------------

MLWParser::ParameterList_typeonlyContext::ParameterList_typeonlyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MLWParser::Parameter_typeonlyContext *> MLWParser::ParameterList_typeonlyContext::parameter_typeonly() {
  return getRuleContexts<MLWParser::Parameter_typeonlyContext>();
}

MLWParser::Parameter_typeonlyContext* MLWParser::ParameterList_typeonlyContext::parameter_typeonly(size_t i) {
  return getRuleContext<MLWParser::Parameter_typeonlyContext>(i);
}


size_t MLWParser::ParameterList_typeonlyContext::getRuleIndex() const {
  return MLWParser::RuleParameterList_typeonly;
}

void MLWParser::ParameterList_typeonlyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList_typeonly(this);
}

void MLWParser::ParameterList_typeonlyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList_typeonly(this);
}

MLWParser::ParameterList_typeonlyContext* MLWParser::parameterList_typeonly() {
  ParameterList_typeonlyContext *_localctx = _tracker.createInstance<ParameterList_typeonlyContext>(_ctx, getState());
  enterRule(_localctx, 10, MLWParser::RuleParameterList_typeonly);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    parameter_typeonly();
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MLWParser::T__7) {
      setState(97);
      match(MLWParser::T__7);
      setState(98);
      parameter_typeonly();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Parameter_typeonlyContext ------------------------------------------------------------------

MLWParser::Parameter_typeonlyContext::Parameter_typeonlyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MLWParser::TypeContext* MLWParser::Parameter_typeonlyContext::type() {
  return getRuleContext<MLWParser::TypeContext>(0);
}


size_t MLWParser::Parameter_typeonlyContext::getRuleIndex() const {
  return MLWParser::RuleParameter_typeonly;
}

void MLWParser::Parameter_typeonlyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter_typeonly(this);
}

void MLWParser::Parameter_typeonlyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter_typeonly(this);
}

MLWParser::Parameter_typeonlyContext* MLWParser::parameter_typeonly() {
  Parameter_typeonlyContext *_localctx = _tracker.createInstance<Parameter_typeonlyContext>(_ctx, getState());
  enterRule(_localctx, 12, MLWParser::RuleParameter_typeonly);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

MLWParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MLWParser::PrimitiveTypeContext* MLWParser::TypeContext::primitiveType() {
  return getRuleContext<MLWParser::PrimitiveTypeContext>(0);
}

MLWParser::IdentifierContext* MLWParser::TypeContext::identifier() {
  return getRuleContext<MLWParser::IdentifierContext>(0);
}


size_t MLWParser::TypeContext::getRuleIndex() const {
  return MLWParser::RuleType;
}

void MLWParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void MLWParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

MLWParser::TypeContext* MLWParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 14, MLWParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MLWParser::T__9:
      case MLWParser::T__10:
      case MLWParser::T__11:
      case MLWParser::T__12:
      case MLWParser::T__13:
      case MLWParser::T__14:
      case MLWParser::T__15: {
        enterOuterAlt(_localctx, 1);
        setState(106);
        primitiveType();
        break;
      }

      case MLWParser::Identifier: {
        enterOuterAlt(_localctx, 2);
        setState(107);
        identifier();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimitiveTypeContext ------------------------------------------------------------------

MLWParser::PrimitiveTypeContext::PrimitiveTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MLWParser::PrimitiveTypeContext::getRuleIndex() const {
  return MLWParser::RulePrimitiveType;
}

void MLWParser::PrimitiveTypeContext::copyFrom(PrimitiveTypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Float32TypeContext ------------------------------------------------------------------

MLWParser::Float32TypeContext::Float32TypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::Float32TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFloat32Type(this);
}
void MLWParser::Float32TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFloat32Type(this);
}
//----------------- VoidTypeContext ------------------------------------------------------------------

MLWParser::VoidTypeContext::VoidTypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::VoidTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVoidType(this);
}
void MLWParser::VoidTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVoidType(this);
}
//----------------- BoolTypeContext ------------------------------------------------------------------

MLWParser::BoolTypeContext::BoolTypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::BoolTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolType(this);
}
void MLWParser::BoolTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolType(this);
}
//----------------- Float64TypeContext ------------------------------------------------------------------

MLWParser::Float64TypeContext::Float64TypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::Float64TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFloat64Type(this);
}
void MLWParser::Float64TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFloat64Type(this);
}
//----------------- Int64TypeContext ------------------------------------------------------------------

MLWParser::Int64TypeContext::Int64TypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::Int64TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt64Type(this);
}
void MLWParser::Int64TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt64Type(this);
}
//----------------- StringTypeContext ------------------------------------------------------------------

MLWParser::StringTypeContext::StringTypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::StringTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStringType(this);
}
void MLWParser::StringTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStringType(this);
}
//----------------- Int32TypeContext ------------------------------------------------------------------

MLWParser::Int32TypeContext::Int32TypeContext(PrimitiveTypeContext *ctx) { copyFrom(ctx); }

void MLWParser::Int32TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt32Type(this);
}
void MLWParser::Int32TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MLWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt32Type(this);
}
MLWParser::PrimitiveTypeContext* MLWParser::primitiveType() {
  PrimitiveTypeContext *_localctx = _tracker.createInstance<PrimitiveTypeContext>(_ctx, getState());
  enterRule(_localctx, 16, MLWParser::RulePrimitiveType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MLWParser::T__9: {
        _localctx = _tracker.createInstance<MLWParser::Int32TypeContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(110);
        match(MLWParser::T__9);
        break;
      }

      case MLWParser::T__10: {
        _localctx = _tracker.createInstance<MLWParser::Int64TypeContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(111);
        match(MLWParser::T__10);
        break;
      }

      case MLWParser::T__11: {
        _localctx = _tracker.createInstance<MLWParser::Float32TypeContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(112);
        match(MLWParser::T__11);
        break;
      }
